--- a/a46246.md
+++ b/a46246.md
@@ -4,14 +4,44 @@
 ## Sumário
 * <a href="#Introdução">Introdução</a>;
   * <a href="#Objetivo">Objetivo</a>;
+  * <a href="#Software Instalado">Software Instalado</a>;
+  * <a href="#Credenciais de Login">Credenciais de Login</a>;
 * <a href="#configuração do Ambiente ">Configuração de Ambiente</a>;
 * <a href="#Vulnerabilidades Conhecidas">Vulnerabilidades Conhecidas</a>;
 * <a href="#Identificação de Vulnerabilidades">Identificação de Vulnerabilidades</a>;
 * <a href="#Considerações Éticas">Considerações Éticas</a>;
 * <a href="#Conclusão">Conclusão</a>;
 
-##
+## Introdução 
+
+A criação de uma máquina virtual vulnerável é uma prática essencial em segurança da informação. Este projeto oferece uma abordagem prática, permitindo explorar e compreender vulnerabilidades em sistemas computacionais. 
+
+### Objetivo
+
+O objetivo deste projeto é proporcionar aos participantes uma experiência prática na criação e exploração de uma máquina virtual vulnerável. Ao configurar intencionalmente falhas de segurança, os envolvidos terão a oportunidade de aprimorar suas habilidades em identificação e mitigação de vulnerabilidades.
+
+## Configuração de Ambiente
+Na etapa inicial, estabeleceremos o ambiente necessário para a criação da máquina virtual vulnerável.
+Ultilizaremos uma plataforma de virtualização VMware.
+* Configurada com 1GB de RAM, 64GB núcleos CPU, distribuídos em 2 sockets, cada um com 32 núcleos e 20GB de armazenamento.
+* Sistema operaciol Debian GNU/Linux 12 (bookworm).
+
+  ### Software Instalado
+    * 1. Apache 2.4.57
+    * 2. MySQL 10.11.4-MariaDB
+    * 3.  PHP 8.2.7
+    * 4.  OWASP Juice Shop 16.0.0
+    * 5.  WordPress 6.4.2
   
+### Credenciais de Login
+**Usuário:** `Wargame`
+**Senha:** `1234`
+
+  
+  
+
+
+
 
 
 
