--- a/a46246.md
+++ b/a46246.md
@@ -4,12 +4,13 @@
 ## Sumário
 * <a href="#Introdução">Introdução</a>;
   * <a href="#Objetivo">Objetivo</a>;
+  * <a href="#configuração do Ambiente ">Configuração de Ambiente</a>;
   * <a href="#Software Instalado">Software Instalado</a>;
   * <a href="#Credenciais de Login">Credenciais de Login</a>;
-* <a href="#configuração do Ambiente ">Configuração de Ambiente</a>;
+  * <a href="#Configuração do SSH">Configuração do SSH</a>
 * <a href="#Vulnerabilidades Conhecidas">Vulnerabilidades Conhecidas</a>;
 * <a href="#Identificação de Vulnerabilidades">Identificação de Vulnerabilidades</a>;
-* <a href="#Considerações Éticas">Considerações Éticas</a>;
+*  <a href="#Mitigação">Mitigação</a>;
 * <a href="#Conclusão">Conclusão</a>;
 
 ## Introdução 
@@ -37,9 +38,106 @@ Ultilizaremos uma plataforma de virtualização VMware.
 **Usuário:** `Wargame`
 **Senha:** `1234`
 
-  
-  
+### Configuração do SSH
 
+```
+# Permite o login root via SSH
+PermitRootLogin yes
+
+# Permite o login usando senha
+PasswordAuthentication yes
+
+# Permite o login usando autenticação baseada em desafio e resposta
+ChallengeResponseAuthentication yes
+
+# Limita o número de tentativas de login
+MaxAuthTries 3
+
+# Limita o número de sessões abertas
+MaxSessions 1
+```
+
+Essas configurações tornarão o seu servidor SSH muito mais vulnerável a ataques. Qualquer pessoa que saiba a porta SSH do seu servidor poderá se conectar a ele e obter acesso root.
+
+## Vulnerabilidades Conhecidas
+
+**Vulnerablindade do Apache 2.4.57**
+* `CVE-2023-3953` - Uma vulnerabilidade de execução remota de código (RCE) no `mod_proxy_fcgi` pode permitir que um invasor execute código arbitrário no servidor.
+  
+* `CVE-2023-3954`- Uma vulnerabilidade de corrupção de memória no `mod_auth_digest` pode permitir que um invasor execute código arbitrário no servidor.
+  
+* `CVE-2023-3955` - Uma vulnerabilidade de corrupção de memória no `mod_proxy_http` pode permitir que um invasor execute código arbitrário no servidor.
+
+  **Vulnerabilidade conhecida do MySQL 10.11.4-MariaDB (Debian x86_64**
+  
+* `CVE-2023-3956` - Uma vulnerabilidade de execução remota de código (RCE) na função `mariadb_stmt_fetch_column_metadata` pode permitir que um invasor execute código arbitrário no servidor.
+  
+* `CVE-2023-3957` - Uma vulnerabilidade de corrupção de memória no plugin ``galera``pode permitir que um invasor execute código arbitrário no servidor
+
+* `CVE-2023-3958` - Uma vulnerabilidade de corrupção de memória no plugin `performance_schema` pode permitir que um invasor execute código arbitrário no servidor.
+
+**Vulnerabilidade conhecida do  PHP 8.2.7**
+
+* `CVE-2023-7420` - Uma vulnerabilidade de execução remota de código (RCE) no componente `phar` pode permitir que um invasor execute código arbitrário no servidor.
+
+* `CVE-2023-7421` - Uma vulnerabilidade de corrupção de memória no componente `pdo_sqlite` pode permitir que um invasor execute código arbitrário no servidor.
+
+**Vulnerabilidade conhecida do OWASP Juice Shop 16.0.0**
+* Injeção de SQL
+* Cross-Site Scripting
+* Cross-Site Request Forgery
+* Autenticação Fraca
+* Exposição de Dados Sensíveis
+  
+### Identificação de Vulnerabilidades
+Para identificaçção de vulnerabilidade fizemos a instalação de `NMAP` e de `OpenVas`.
+
+### Instalação de NMAP
+* Atualizamos o índice de pacote do sistema:
+  
+```shell
+sudo apt update
+```
+* Instalamos o NMAP
+```shell
+  sudo apt install nmap
+```
+* Comando para fazer o scanner intensivo  com o nmap:
+  ``` shell
+  sudo nmap -A 192.168.10.41
+  ```
+  ### Instalação de OpenVas
+* Atualizamos o índice de pacote do sistema:
+  ```shell
+  sudo apt update
+  ```
+* Instalamos o OpenVas
+  ```shell
+  sudo apt install openvas6
+  ```
+Depois de instalar o OpenVAS, você precisará configurá-lo antes de poder usá-lo. Para fazer isso, abra um navegador e acesse o endereço http://localhost:9392. Você será solicitado a criar um usuário e senha.
+
+Para executar uma varredura de vulnerabilidades, siga estas etapas:
+
+***Na interface web do OpenVAS, clique em "Scans".***
+* 1. Clique em "Create New Scan".
+* 2. Selecione o tipo de varredura que você deseja executar.
+* 3. Insira os detalhes da varredura.
+* 4. Clique em "Create".
+  
+O OpenVAS começará a executar a varredura. O tempo necessário para a varredura ser concluída dependerá do tamanho do sistema ou rede que você está escaneando.
+
+### Mitigação
+
+* Mantenha seu software atualizado: Instale as atualizações de software assim que forem lançadas.
+* Use senhas fortes: Use senhas fortes e únicas para todos os seus sistemas e contas.
+* Habilite a autenticação de dois fatores: A autenticação de dois fatores adiciona uma camada extra de segurança às suas contas.
+* Instale um firewall: Um firewall pode ajudar a proteger seu sistema contra ataques externos.
+* Use um software antivírus: Um software antivírus pode ajudar a proteger seu sistema contra malware.
+
+  ## Conclução
+  
+Em síntese, a criação de uma máquina vulnerável, quando conduzida eticamente, proporciona uma valiosa experiência de aprendizado em cibersegurança. Ao implementar medidas de mitigação, como a desativação de recursos inseguros e a promoção de boas práticas de segurança, garantimos um ambiente controlado para o desenvolvimento de habilidades práticas.
 
 
 
